(executable
  (public_name sdk.exe)
  (name sdk)
  (libraries sha opium cohttp cohttp-lwt-unix caqti caqti-lwt caqti-driver-postgresql uuidm ppx_rapper_lwt alcotest)
  (preprocess (pps ppx_deriving_yojson lwt_ppx ppx_rapper))
  (foreign_stubs 
    (language c) 
    (flags 
      :standard )
      (names addr)))
